# Singleton

./: .gitignore  CMakeLists.txt
src/: Singleton.cpp
